// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`autocomplete > can be aborted by a signal 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│
│  Search: _
│  ● Apple
│  ○ Banana
│  ○ Cherry
│  ○ Grape
│  ○ Orange
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "
",
  "<cursor.show>",
]
`;

exports[`autocomplete > limits displayed options when maxItems is set 1`] = `
[
  "<cursor.hide>",
  "│
◆  Select an option
│
│  Search: _
│  ● Option 0
│  ○ Option 1
│  ○ Option 2
│  ○ Option 3
│  ○ Option 4
│  ...
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=11>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  Select an option
│  Option 0",
  "
",
  "<cursor.show>",
]
`;

exports[`autocomplete > renders initial UI with message and instructions 1`] = `
[
  "<cursor.hide>",
  "│
◆  Select a fruit
│
│  Search: _
│  ● Apple
│  ○ Banana
│  ○ Cherry
│  ○ Grape
│  ○ Orange
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  Select a fruit
│  Apple",
  "
",
  "<cursor.show>",
]
`;

exports[`autocomplete > renders placeholder if set 1`] = `
[
  "<cursor.hide>",
  "│
◆  Select a fruit
│
│  Search: Type to search...
│  ● Apple
│  ○ Banana
│  ○ Cherry
│  ○ Grape
│  ○ Orange
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  Select a fruit
│  Apple",
  "
",
  "<cursor.show>",
]
`;

exports[`autocomplete > shows hint when option has hint and is focused 1`] = `
[
  "<cursor.hide>",
  "│
◆  Select a fruit
│
│  Search: _
│  ● Apple
│  ○ Banana
│  ○ Cherry
│  ○ Grape
│  ○ Orange
│  ○ Kiwi
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=11>",
  "<cursor.down count=3>",
  "<erase.down>",
  "│  Search:
│  ○ Apple
│  ● Banana
│  ○ Cherry
│  ○ Grape
│  ○ Orange
│  ○ Kiwi
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=11>",
  "<cursor.down count=5>",
  "<erase.down>",
  "│  ○ Banana
│  ● Cherry
│  ○ Grape
│  ○ Orange
│  ○ Kiwi
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=11>",
  "<cursor.down count=6>",
  "<erase.down>",
  "│  ○ Cherry
│  ● Grape
│  ○ Orange
│  ○ Kiwi
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=11>",
  "<cursor.down count=7>",
  "<erase.down>",
  "│  ○ Grape
│  ● Orange
│  ○ Kiwi
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=11>",
  "<cursor.down count=8>",
  "<erase.down>",
  "│  ○ Orange
│  ● Kiwi (New Zealand)
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=11>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  Select a fruit
│  Kiwi",
  "
",
  "<cursor.show>",
]
`;

exports[`autocomplete > shows no matches message when search has no results 1`] = `
[
  "<cursor.hide>",
  "│
◆  Select a fruit
│
│  Search: _
│  ● Apple
│  ○ Banana
│  ○ Cherry
│  ○ Grape
│  ○ Orange
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=3>",
  "<erase.down>",
  "│  Search: z█ (0 matches)
│  No matches found
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  Select a fruit
│",
  "
",
  "<cursor.show>",
]
`;

exports[`autocomplete > shows selected value in submit state 1`] = `
[
  "<cursor.hide>",
  "│
◆  Select a fruit
│
│  Search: _
│  ● Apple
│  ○ Banana
│  ○ Cherry
│  ○ Grape
│  ○ Orange
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=3>",
  "<erase.down>",
  "│  Search:
│  ○ Apple
│  ● Banana
│  ○ Cherry
│  ○ Grape
│  ○ Orange
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  Select a fruit
│  Banana",
  "
",
  "<cursor.show>",
]
`;

exports[`autocomplete > shows strikethrough in cancel state 1`] = `
[
  "<cursor.hide>",
  "│
◆  Select a fruit
│
│  Search: _
│  ● Apple
│  ○ Banana
│  ○ Cherry
│  ○ Grape
│  ○ Orange
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=1>",
  "<erase.down>",
  "■  Select a fruit
│",
  "
",
  "<cursor.show>",
]
`;

exports[`autocomplete > supports initialValue 1`] = `
[
  "<cursor.hide>",
  "│
◆  Select a fruit
│
│  Search: _
│  ○ Apple
│  ○ Banana
│  ● Cherry
│  ○ Grape
│  ○ Orange
│  ↑/↓ to select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  Select a fruit
│  Cherry",
  "
",
  "<cursor.show>",
]
`;

exports[`autocompleteMultiselect > can be aborted by a signal 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo

│  Search: _
│  ◻ Apple
│  ◻ Banana
│  ◻ Cherry
│  ◻ Grape
│  ◻ Orange
│  ↑/↓ to navigate • Tab: select • Enter: confirm • Type: to search
└",
  "
",
  "<cursor.show>",
]
`;

exports[`autocompleteMultiselect > can use navigation keys to select options 1`] = `
[
  "<cursor.hide>",
  "│
◆  Select fruits

│  Search: _
│  ◻ Apple
│  ◻ Banana
│  ◻ Cherry
│  ◻ Grape
│  ◻ Orange
│  ↑/↓ to navigate • Tab: select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=3>",
  "<erase.down>",
  "│  Search: 
│  ◻ Apple
│  ◻ Banana
│  ◻ Cherry
│  ◻ Grape
│  ◻ Orange
│  ↑/↓ to navigate • Space/Tab: select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=5>",
  "<erase.line><cursor.left count=1>",
  "│  ◼ Banana",
  "<cursor.down count=5>",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=6>",
  "<erase.line><cursor.left count=1>",
  "│  ◼ Cherry",
  "<cursor.down count=4>",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  Select fruits
│  2 items selected",
  "
",
  "<cursor.show>",
]
`;

exports[`autocompleteMultiselect > renders error when empty selection & required is true 1`] = `
[
  "<cursor.hide>",
  "│
◆  Select a fruit

│  Search: _
│  ◻ Apple
│  ◻ Banana
│  ◻ Cherry
│  ◻ Grape
│  ◻ Orange
│  ↑/↓ to navigate • Tab: select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=1>",
  "<erase.down>",
  "▲  Select a fruit

│  Search: _
│  Please select at least one item
│  ◻ Apple
│  ◻ Banana
│  ◻ Cherry
│  ◻ Grape
│  ◻ Orange
│  ↑/↓ to navigate • Tab: select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=11>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◆  Select a fruit

│  Search: _
│  ◼ Apple
│  ◻ Banana
│  ◻ Cherry
│  ◻ Grape
│  ◻ Orange
│  ↑/↓ to navigate • Tab: select • Enter: confirm • Type: to search
└",
  "<cursor.backward count=999><cursor.up count=10>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  Select a fruit
│  1 items selected",
  "
",
  "<cursor.show>",
]
`;
